--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,6 +4,7 @@
 
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.VIBRATE" />
 
     <application
         android:name="GameOfWords"
@@ -13,6 +14,7 @@
         android:supportsRtl="true"
         android:theme="@android:style/Theme.NoTitleBar" >
         <service android:name=".GeoFenceTransitionIntentService"/>
+        <service android:name=".NotificationService" />
         <activity
             android:name=".MainActivity"
             android:label="@string/app_name"
@@ -23,6 +25,13 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <receiver android:name=".finishGame$PointsListener">
+            <intent-filter>
+                <action android:name="ACTION_GAME_POINTS" />
+            </intent-filter>
+        </receiver>
+
     </application>
 
 </manifest>
