Start of recording ESM specifics (dismissed, answered, etc.) Store OS version, screen-size, etc. during registration. Removed gameplay elements from non-gamified.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -34,6 +34,12 @@
         </receiver>
         <receiver android:name=".SetAlarmBroadcastReceiver" />
 
+        <receiver android:name=".NotificationBroadcastReceiver">
+            <intent-filter>
+                <action android:name="notification_cancelled" />
+            </intent-filter>
+        </receiver>
+
         <activity
             android:name=".app.SecondActivity"
             android:label="@string/title_activity_second" />
