Added check for internet connection. Alerts reported to DB.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,6 +6,7 @@
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.VIBRATE" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
     <application
         android:name=".GeoOulu"
@@ -33,7 +34,10 @@
                 <action android:name="ACTION_GAME_POINTS" />
             </intent-filter>
         </receiver>
+
         <receiver android:name=".SetAlarmBroadcastReceiver" />
+
+        <receiver android:name=".SetGPSAlarmBroadcastReceiver" />
 
         <receiver android:name=".NotificationBroadcastReceiver">
             <intent-filter>
