--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,4 +40,10 @@ dependencies {
     compile 'com.android.support:design:23.1.1'
     compile 'com.google.android.gms:play-services:8.4.0'
     compile 'com.android.support:support-v4:23.1.1'
+    compile 'com.google.android.gms:play-services-analytics:8.4.0'
 }
+
+
+
+
+apply plugin: 'com.google.gms.google-services'
